tests/integration/snapshots/integration__snapshot__ref_confusion-2.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"ref-confusion/issue-518-repro.yml\")).offline(false).run()?"
snapshot_kind: text
---
No findings to report. Good job! (1 suppressed)
