tests/integration/snapshots/integration__snapshot__ref_confusion.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(workflow_under_test(\"ref-confusion.yml\")).offline(false).run()?"
snapshot_kind: text
---
warning[ref-confusion]: git ref for action with ambiguous ref type
  --> @@INPUT@@:11:9
   |
11 |       - uses: woodruffw/gha-hazmat/ref-confusion@confusable
   |         --------------------------------------------------- uses a ref that's provided by both the branch and tag namespaces
   |
   = note: audit confidence → High

2 findings (1 suppressed): 0 unknown, 0 informational, 0 low, 1 medium, 0 high
