tests/integration/snapshots/integration__snapshot__template_injection-10.snap
---
source: tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"template-injection/issue-749-repro.yml\")).run()?"
snapshot_kind: text
---
No findings to report. Good job!
